ADD: Assigned as Python Package

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -6,9 +6,9 @@ $ <- completed
 
 
 
-		# on-time send message signal
+	$	# on-time send message signal
 		# store data in sqlite
 		# easy to use as frame-work
-		# 
+	$	# make as a python package
 
 
