Add: Two Step Verification

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -10,5 +10,5 @@ $ <- completed
 		# store data in sqlite
 		# easy to use as frame-work
 	$	# make as a python package
-
+		# Two step Client verification
 
