--- a/ToDo.txt
+++ b/ToDo.txt
@@ -11,4 +11,6 @@ $ <- completed
 		# easy to use as frame-work
 	$	# make as a python package
 		# Two step Client verification
+		# custom exceptions
+		# custom message model
 
