--- a/ToDo.txt
+++ b/ToDo.txt
@@ -7,10 +7,15 @@ $ <- completed
 
 
 	$	# on-time send message signal
-	!	# store data in sqlite
-		# easy to use as frame-work
 	$	# make as a python package
-		# Two step Client verification
-	!	# custom exceptions
+	$	# store data in sqlite
+		# get data in sqlite
+		# after send msg delete data in sqlite
+		# add user list in sqlite
+		# get user in sqlite
+		# remove user in sqlite
 	!	# custom message model
+	!	# custom exceptions
+		# easy to use as frame-work
+		# Two step Client verification
 
